<resources>
    <string name="app_name">Presence</string>
    <string name="label_your_name_hint">Your Name</string>
    <string name="label_institution_name_hint">College/School</string>
    <string name="label_class_hint">Semester/Class</string>
    <string name="label_submit_button">submit</string>
    <string name="label_user_details_activity">Education</string>
    <string name="label_subject_title_hint">Subject Title</string>
    <string name="label_create_time_table_button">Create Time Table</string>
    <string name="label_start_up_dialog_title">Notice</string>
    <string name="label_start_up_dialog_description">All of the information will be stored inside your phone.
        Nothing is uploaded to our servers. Thank You!</string>
    <string name="label_button_startup_dialog_title">OK</string>
    <string name="label_start_up_dialog_tag">startupdialog</string>
    <string name="label_add_subject_dialog">add subject</string>
    <string name="title_add_subject">Add subject</string>

    <string name="chip_monday_title">Monday</string>
    <string name="chip_tuesday_title">Tuesday</string>
    <string name="chip_wednesday_title">Wednesday</string>
    <string name="chip_thursday_title">Thursday</string>
    <string name="chip_friday_title">Friday</string>
    <string name="chip_saturday_title">Saturday</string>
    <string name="subject_edit_text_hint">Subject</string>
    <string name="add_subjects_details_dialog_title">Subject Details</string>
    <string name="days_of_class_title">Choose Days of Class:</string>
    <string name="cancel_button_title">Cancel</string>
    <string name="btn_save_title">Save</string>
    <string name="label_overall_attendance_percent_hint">Overall Attendance Percent</string>
    <string name="label_attendance_percent_hint">Attendance Percent</string>
    <string name="label_user_name_helper_text">Name cannot be empty</string>
    <string name="label_institution_name_helper_text">Institution name cannot be empty</string>
    <string name="label_class_value_helper_text">Class/Semester cannot be empty</string>
    <string name="label_overall_percent_helper_text">Please enter minimum attendance percent</string>
    <string name="label_user_details_shared_preference">UserDetailsPref</string>
    <string name="label_percent_less_than_100_helper_text">Attendance percent can be maximum 100%</string>
    <string name="label_max_class_helper_text">Class or Semester cannot be greater than 12</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_settings_dark_mode">Dark Mode</string>
    <string name="label_settings_dark_mode_summary">Enable this setting to change App Theme</string>
    <string name="label_settings_add_subject">Add Subject</string>

</resources>
