<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvAddSubjectsDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_add_subjects_button"
        android:fontFamily="@font/font_bold"
        android:text="@string/add_subjects_details_dialog_title"
        android:textAllCaps="true"
        android:textColor="@color/textDarkPrimary"
        android:textSize="@dimen/add_subjects_dialog_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otfSubjectName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_add_subjects_button"
        android:hint="@string/subject_edit_text_hint"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_helper_text"
        app:layout_constraintEnd_toEndOf="@id/tvAddSubjectsDialogTitle"
        app:layout_constraintStart_toStartOf="@id/tvAddSubjectsDialogTitle"
        app:layout_constraintTop_toBottomOf="@id/tvAddSubjectsDialogTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSubjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDaysOfClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_add_subjects_button"
        android:fontFamily="@font/font_bold"
        android:text="@string/days_of_class_title"
        android:textColor="@color/textDarkPrimary"
        android:textSize="@dimen/text_sixteen_sp"
        app:layout_constraintStart_toStartOf="@id/otfSubjectName"
        app:layout_constraintTop_toBottomOf="@id/otfSubjectName" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipMonday"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_eight_dp"
        android:layout_marginEnd="@dimen/padding_eight_dp"
        android:text="@string/chip_monday_title"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/chipThursday"
        app:layout_constraintEnd_toStartOf="@id/chipTuesday"
        app:layout_constraintStart_toStartOf="@id/otfSubjectName"
        app:layout_constraintTop_toBottomOf="@id/tvDaysOfClass" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipTuesday"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_eight_dp"
        android:text="@string/chip_tuesday_title"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@id/chipMonday"
        app:layout_constraintEnd_toStartOf="@id/chipWednesday"
        app:layout_constraintStart_toEndOf="@id/chipMonday"
        app:layout_constraintTop_toTopOf="@id/chipMonday" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipWednesday"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_add_subjects_button"
        android:text="@string/chip_wednesday_title"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@id/chipTuesday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chipTuesday"
        app:layout_constraintTop_toTopOf="@id/chipTuesday" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipThursday"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip_thursday_title"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintEnd_toStartOf="@id/chipFriday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipMonday" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipFriday"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip_friday_title"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@id/chipThursday"
        app:layout_constraintEnd_toStartOf="@id/chipSaturday"
        app:layout_constraintStart_toEndOf="@id/chipThursday"
        app:layout_constraintTop_toTopOf="@id/chipThursday" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSaturday"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip_saturday_title"
        android:textColor="@color/color_white"
        app:layout_constraintBottom_toBottomOf="@id/chipFriday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chipFriday"
        app:layout_constraintTop_toTopOf="@id/chipFriday" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otfAttendance"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:hint="@string/label_attendance_percent_hint"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_helper_text"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="@id/tvAddSubjectsDialogTitle"
        app:layout_constraintStart_toStartOf="@id/tvAddSubjectsDialogTitle"
        app:layout_constraintTop_toBottomOf="@id/chipThursday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAttendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_add_subjects_button"
        android:backgroundTint="@color/color_cancel_button"
        android:drawableLeft="@drawable/ic_cancel"
        android:fontFamily="@font/font_bold"
        android:text="@string/cancel_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipThursday" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_add_subjects_button"
        android:backgroundTint="@color/color_save_button"
        android:drawableLeft="@drawable/ic_save"
        android:fontFamily="@font/font_bold"
        android:text="@string/btn_save_title"
        app:layout_constraintBottom_toBottomOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>