<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_twelve_dp"
    android:paddingLeft="@dimen/margin_twelve_dp"
    android:paddingRight="@dimen/margin_twelve_dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvStartupDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_start_up_dialog_title"
        android:fontFamily="@font/font_bold"
        android:textAllCaps="true"
        android:textSize="@dimen/action_bar_text_size"
        android:textColor="@color/textDarkPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvStartupDialogDescription"
        />

    <TextView
        android:id="@+id/tvStartupDialogDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_start_up_dialog_description"
        android:fontFamily="@font/font_regular"
        android:textSize="@dimen/startup_description_text_size"
        android:lineSpacingExtra="@dimen/stroke_width"
        android:textColor="@color/textDarkSecondary"
        android:layout_marginTop="@dimen/margin_twenty_dp"
        app:layout_constraintTop_toBottomOf="@id/tvStartupDialogTitle"
        app:layout_constraintStart_toStartOf="@id/tvStartupDialogTitle"
        app:layout_constraintBottom_toTopOf="@id/btnStartupDialogOk"
        />

    <Button
        android:id="@+id/btnStartupDialogOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_startup_dialog_title"
        android:textSize="@dimen/startup_description_text_size"
        android:fontFamily="@font/font_bold"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/color_custom_button"
        app:layout_constraintTop_toBottomOf="@id/tvStartupDialogDescription"
        app:layout_constraintEnd_toEndOf="@id/tvStartupDialogDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>