<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".UserDetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <ImageView
        android:id="@+id/ivSubjectsLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:src="@drawable/ic_teacher"
        app:layout_constraintBottom_toTopOf="@id/otfUserName"
        app:layout_constraintEnd_toEndOf="@id/glVerticalRight"
        app:layout_constraintStart_toStartOf="@id/glVerticalLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otfUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:hint="@string/label_your_name_hint"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_helper_text"
        app:layout_constraintBottom_toTopOf="@id/otfInstitutionName"
        app:layout_constraintEnd_toStartOf="@id/glVerticalRight"
        app:layout_constraintStart_toStartOf="@id/glVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/ivSubjectsLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otfInstitutionName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:hint="@string/label_institution_name_hint"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_helper_text"
        app:layout_constraintBottom_toTopOf="@id/otfClass"
        app:layout_constraintEnd_toStartOf="@id/glVerticalRight"
        app:layout_constraintStart_toStartOf="@id/glVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/otfUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInstitutionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otfClass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:hint="@string/label_class_hint"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_helper_text"
        app:layout_constraintBottom_toTopOf="@id/otfAttendancePercent"
        app:layout_constraintEnd_toStartOf="@id/glVerticalRight"
        app:layout_constraintStart_toStartOf="@id/glVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/otfInstitutionName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otfAttendancePercent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:hint="@string/label_overall_attendance_percent_hint"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/color_helper_text"
        app:layout_constraintBottom_toTopOf="@id/btnAddSubjects"
        app:layout_constraintEnd_toStartOf="@id/glVerticalRight"
        app:layout_constraintStart_toStartOf="@id/glVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/otfClass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAttendancePercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_regular"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAddSubjects"
        style="@style/CustomButton.Filled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:fontFamily="@font/font_bold"
        android:text="@string/label_submit_button"
        android:textSize="@dimen/text_sixteen_sp"
        app:layout_constraintEnd_toEndOf="@id/otfClass"
        app:layout_constraintStart_toStartOf="@id/otfClass"
        app:layout_constraintTop_toBottomOf="@id/otfAttendancePercent" />

</androidx.constraintlayout.widget.ConstraintLayout>